# eshop-test-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  conftest.py  pyproject.toml  requirements.txt
.claude/agents/: test-author.md
.claude/commands/: add-page.md  create-test.md  edit-test.md  record-scenario.md  run-tests.md  scan-page.md  scenario-to-test.md  verify-test.md
agent/: agent.yaml  environment.yaml  run_session.py
config/: settings.py
docs/: ARCHITECTURE.md
fixtures/: __init__.py  browser.py
pages/: __init__.py  auth_page.py  base_page.py  cart_page.py  catalog_page.py  guest_page.py  login_page.py  main_page.py  product_details_page.py  product_list_page.py
recorded_scripts/: README.md
recorded_scripts/auth/: login.py
steps/: __init__.py  auth_steps.py  cart_steps.py  catalog_steps.py
test_data/: __init__.py  products.py  users.py
tests/e2e/: test_add_to_cart.py  test_add_to_cart_via_search.py  test_auth.py  test_auth_login.py  test_catalog.py
utils/: recorder.py  script_converter.py
