[tool.poetry]
name = "sibur-eshop-tests"
version = "0.1.0"
description = "Автотесты для eshop.sibur.ru на Playwright + Page Object Model"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44"
pytest = "^8.2"
pytest-playwright = "^0.5"
pytest-asyncio = "^0.23"
python-dotenv = "^1.0"
allure-pytest = "^2.13"
faker = "^25.0"

[tool.poetry.dev-dependencies]
black = "^24.4"
ruff = "^0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -v"

[tool.ruff]
line-length = 100
